[CodeQA] Supprime les fichiers de déploiement qui sont maintenant avec les autres de Gravitee